--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -16,8 +16,8 @@ jobs:
       id-token: write
       contents: read 
 
-#Checkout My Repo
-  steps:
+    steps:
+
     - name: Checkout repository
       uses: actions/checkout@v4
 
@@ -27,9 +27,9 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v4
       with:
         role-to-assume: arn:aws:iam::038774803581:role/github.to.aws.oicd@
-        aws-region: $aws-region
+        aws-region: us-east-1
 
-# Login to ECR
+## Login to ECR
 
     - name: Login to Amazon ECR
       id: login-ecr 
