--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,10 +1,9 @@
-name: "Terraform Init+Plan"
+name: "Terraform Destroy"
 
 on:
   workflow_dispatch :
     branches:
       - main
-
 
 jobs:
   terraform:
@@ -15,14 +14,13 @@ jobs:
       contents: read
 
     steps:
-
       - name: Checkout
         uses: actions/checkout@v3 
     
 
   
       - name: Configure AWS credentials
-        uses:  aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::038774803581:role/github.to.aws.oicd@
           aws-region: us-east-1
@@ -38,28 +36,6 @@ jobs:
         working-directory: ./Terraform
         run: terraform init
 
-      - name: Terraform validate
+      - name: Terraform Destroy
         working-directory: ./Terraform
-        run: terraform validate
-
-      - name: Terraform fmt
-        working-directory: ./Terraform
-        run: terraform fmt -check 
-
-      
-      - name: Terraform Plan
-        working-directory: ./Terraform
-        run: terraform plan 
-
-
-
-      
-
-
-
-
-
-    
-      
-
-
+        run: terraform destroy -auto-approve
