--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -1,7 +1,7 @@
 name: "Terraform Apply"
 
 on:
-  workflow_dispatch :
+  workflow_dispatch:
     branches:
       - main
 
@@ -16,17 +16,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3 
-    
 
-  
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::038774803581:role/github.to.aws.oicd@
+          role-to-assume: arn:aws:iam::038774803581:role/github.to.aws.oicd
           aws-region: us-east-1
 
-      
-      
       - name: Install Terraform 
         uses: hashicorp/setup-terraform@v3
         with:
@@ -39,3 +35,16 @@ jobs:
       - name: Terraform Apply
         working-directory: ./Terraform
         run: terraform apply -auto-approve
+
+  post-deployment-check:
+    name: Health Check
+    runs-on: ubuntu-latest
+    needs: terraform
+    steps:
+      - name: Health check
+        run: |
+          status=$(curl -s -o /dev/null -w "%{http_code}" https://mubashir.site/health)
+          if [ "$status" != "200" ]; then
+            echo "Health check failed"
+            exit 1
+          fi
