--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -21,7 +21,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::038774803581:role/github.to.aws.oicd
-          aws-region: us-east-1
+          aws-region: eu-west-2
 
       - name: Install Terraform 
         uses: hashicorp/setup-terraform@v3
