--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -25,7 +25,7 @@ jobs:
         uses:  aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::038774803581:role/github.to.aws.oicd@
-          aws-region: us-east-1
+          aws-region: eu-west-2
 
       
       
