--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Run Trivy Vulnerability Scanner
       uses: aquasecurity/trivy-action@0.31.0
       with:
-        image-ref: ${{ steps.login-ecr.outputs.registry }}
+        image-ref: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/threat-composer-app:latest
         format: 'table'
         exit-code: '1'
         ignore-unfixed: true
