--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -34,12 +34,18 @@ jobs:
         with:
           terraform_version: latest 
 
+      
+
       - name: Create S3 for Terraform State
         run: |
           aws s3api create-bucket \
           --bucket mubashir-tf-state-bucket-20-11-2025 \
-          -- region eu-west-2 \
-          -- create-bucket-configuration LocationConstraint=eu-west-2 || echo "Bucket created"
+          --region eu-west-2 \
+          --create-bucket-configuration LocationConstraint=eu-west-2 || echo "Bucket created"
+
+      
+      - name: Wait for S3 provision
+        run: sleep 10
 
 
       - name: Terraform Init
