--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::038774803581:role/github.to.aws.oicd
+          role-to-assume: arn:aws:iam::038774803581:role/github.to.aws.oicd@
           aws-region: eu-west-2
 
       - name: Install Terraform 
