--- a/My-App/Dockerfile
+++ b/My-App/Dockerfile
@@ -1,18 +1,16 @@
 # Stage 1: Build
 FROM node:24-alpine AS builder
 
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 WORKDIR /app
 
+COPY package.json yarn.lock tsconfig.json ./
 
-COPY --chown=appuser:appgroup package.json yarn.lock ./
+
 RUN yarn install --frozen-lockfile
 
- 
-COPY --chown=appuser:appgroup . .
+COPY . .
+
 RUN yarn build
-
-
 
 RUN rm -rf src/ tsconfig.json
 
@@ -20,9 +18,11 @@ RUN rm -rf src/ tsconfig.json
 # Stage 2: Production
 
 FROM nginx:alpine
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup \
-   && mkdir -p /var/cache/nginx/client_temp /var/run/nginx /usr/share/nginx/html \
-   && chown -R appuser:appgroup /var/cache/nginx /var/run/nginx /usr/share/nginx/html
+
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
+RUN rm -rf /usr/share/nginx/html/*
+
 USER appuser
 
 COPY --from=builder /app/build /usr/share/nginx/html
