--- a/My-App/Dockerfile
+++ b/My-App/Dockerfile
@@ -4,8 +4,6 @@ FROM node:24-alpine AS builder
 WORKDIR /app
 
 COPY package.json yarn.lock tsconfig.json ./
-
-
 RUN yarn install --frozen-lockfile
 
 COPY . .
@@ -15,27 +13,27 @@ RUN yarn build
 RUN rm -rf src/ tsconfig.json
 
 
-# Stage 2: Production
-
+# Stage 2: Production with standard nginx
 FROM nginx:alpine
 
+# Create non-root user and group
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 
-RUN mkdir -p /var/cache/nginx /var/run 
+# Create directories Nginx needs and make them writable
+RUN mkdir -p /var/cache/nginx /var/run /usr/share/nginx/html \
+    && chown -R appuser:appgroup /var/cache/nginx /var/run /usr/share/nginx/html \
+    && chmod -R 755 /var/cache/nginx /var/run /usr/share/nginx/html
 
-RUN chown -R appuser:appgroup /var/cache/nginx /var/run
-
-RUN sed -i 's/user nginx;//g' /etc/nginx/nginx.conf
-
-RUN rm -rf /usr/share/nginx/html/*
-
-COPY --from=builder /app/build /usr/share/nginx/html
-
-RUN chown -R appuser:appgroup /usr/share/nginx/html
-
+# Switch to non-root user
 USER appuser
 
-EXPOSE 80
+# Copy React build from builder
+COPY --from=builder /app/build /usr/share/nginx/html
 
-#NGINX used as a server to run my HTML AND JS files
-CMD ["nginx", "-g" , "daemon off;"] 
+# Expose non-privileged port
+EXPOSE 8080
+
+COPY nginx.conf etc/nginx/conf.d/default.conf
+
+# Start Nginx
+CMD ["nginx", "-g", "daemon off;"]
