--- a/My-App/Dockerfile
+++ b/My-App/Dockerfile
@@ -21,10 +21,10 @@ RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 
 # Create directories Nginx needs and make them writable
 RUN mkdir -p /var/cache/nginx /var/run /usr/share/nginx/html \
-    && chown -R appuser:appgroup /var/cache/nginx /var/run /usr/share/nginx/html \
-    && chmod -R 755 /var/cache/nginx /var/run /usr/share/nginx/html
+    && chown -R appuser:appgroup /var/cache/nginx /var/run /usr/share/nginx/html
 
-# Switch to non-root user
+COPY nginx.conf etc/nginx/conf.d/default.conf
+
 USER appuser
 
 # Copy React build from builder
@@ -33,7 +33,6 @@ COPY --from=builder /app/build /usr/share/nginx/html
 # Expose non-privileged port
 EXPOSE 8080
 
-COPY nginx.conf etc/nginx/conf.d/default.conf
 
 # Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
