--- a/My-App/Dockerfile
+++ b/My-App/Dockerfile
@@ -23,7 +23,11 @@ RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 RUN mkdir -p /var/cache/nginx /var/run /usr/share/nginx/html \
     && chown -R appuser:appgroup /var/cache/nginx /var/run /usr/share/nginx/html
 
+RUN touch /var/run/nginx.pid 
+RUN  chown -R appuser:appgroup /var/run/nginx.pid /var/run
+
 COPY nginx.conf etc/nginx/conf.d/default.conf
+
 
 USER appuser
 
