--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -1,4 +1,4 @@
-name: "Terraform Init+Plan"
+name: "Terraform Plan with checkov and fmt"
 
 on:
   workflow_dispatch :
@@ -65,6 +65,7 @@ jobs:
         uses: bridgecrewio/checkov-action@master
         with:
           directory: .
+        run: checkov -d .
 
       - name: Terraform Plan
         working-directory: ./Terraform
