--- a/Terraform/.checkov.yml
+++ b/Terraform/.checkov.yml
@@ -1,10 +1,9 @@
 skip_checks:
-  - CKV_AWS_20   # WAF not required
-  - CKV_AWS_21   # Open security group not critical
-  - CKV_AWS_35   # Optional S3 logging
-  - CKV_AWS_39   # S3 versioning optional
+  - CKV_AWS_20
+  - CKV_AWS_21
+  - CKV_AWS_35
+  - CKV_AWS_39
 
-frameworks:
-  - terraform  
-
+framework:
+  - terraform
 
