Added checkov scan for Iac securtity checks

--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -55,7 +55,7 @@ jobs:
         run: terraform plan
 
       - name: Install Checkov
-        run: pip install checkov
+        run: pip install --upgrade checkov
 
       - name: Checkov Scan
         working-directory: ./Terraform
