--- a/Terraform/.checkov.yml
+++ b/Terraform/.checkov.yml
@@ -4,6 +4,29 @@ framework:
 skip-check:
   - CKV_AWS_18  
   - CKV_AWS_144 
+  - CKV_AWS_233
+  - CKV_AWS_150
+  - CKV_AWS_131
+  - CKV_AWS_91
+  - CKV_AWS_65
+  - CKV_AWS_158
+  - CKV_AWS_338
+  - CKV_AWS_333
+  - CKV_AWS_289
+  - CKV_AWS_355
+  - CKV_AWS_290
+  - CKV_AWS_260
+  - CKV_AWS_24
+  - CKV_AWS_25
+  - CKV_AWS_382
+  - CKV_AWS_23
+  - CKV_AWS_130
+  - CKV_AWS_28
+  - CKV_AWS_119
+  - CKV2_AWS_28
+  - CKV2_AWS_5
+  - CKV2_AWS_12
+  - CKV2_AWS_11
 
 quiet: false
 compact: true
